syntax = "proto3";

package waka;

import "waka.proto";
import "empty/empty.proto";

option java_package = "com.liuhan907.waka";

// 代理
message SupervisorCond {
    int32 supervisor = 1;
}

// 玩家
message PlayerCond {
    int32 player = 1;
}

// 获取代理房间状态
message GetSupervisorRoomRequest {
    // 代理的玩家 ID
    int32 player = 1;
}

// 查询房间状态结果
message GetRoomResponse {
    repeated NiuniuRoomData2 result = 1;
}

// 查询在线玩家结果
message GetOnlinePlayerResponse {
    repeated int32 players = 1;
}

// 清理玩家
message KickPlayerRequest {
    // 玩家 ID
    int32 player = 1;
}

// 清理房间
message KickRoomRequest {
    // 房间 ID
    int32 room_id = 1;
}

// --------------------------------------↑后台消息↑-----------------------------------------

service Backend {
    // 系统配置变更
    rpc ConfigurationChanged(google.protobuf.Empty) returns(google.protobuf.Empty) {}

    // 黑名单变更
    rpc BlacklistChanged(google.protobuf.Empty) returns(google.protobuf.Empty) {}

    // 代理数据变更
    rpc SupervisorChanged(SupervisorCond) returns(google.protobuf.Empty) {}

    // 玩家数据变更
    rpc PlayerChanged(PlayerCond) returns(google.protobuf.Empty) {}

    // 获取代理房间状态
    rpc GetSupervisorRoom(GetSupervisorRoomRequest) returns(GetRoomResponse) {}

    // 获取公共房间状态
    rpc GetPlayerRoom(google.protobuf.Empty) returns(GetRoomResponse) {}

    // 查询在线玩家
    rpc GetOnlinePlayer(google.protobuf.Empty) returns(GetOnlinePlayerResponse) {}

    // 清理玩家
    rpc KickPlayer(KickPlayerRequest) returns(google.protobuf.Empty) {}

    // 清理房间
    rpc KickRoom(KickRoomRequest) returns(google.protobuf.Empty) {}
}

// --------------------------------------↑后台RPC↑-----------------------------------------